# CNC_Parser

./: .dockerignore  .gitignore  Dockerfile  iniciar.bat  iniciar.sh  pyproject.toml  railway.json
app/: .env.example  .gitignore  pdf_report.py  server.py
app/templates/: index.html
hitex_tool/: __init__.py  __main__.py  cli.py  efab_reader.py  gcode_parser.py  normalize.py  production.py  zip_reader.py
tests/: test_efab_reader.py  test_gcode_parser.py  test_hitex_preview.py  test_normalize.py  test_production.py  test_zip_reader.py
